# cc-status-line

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  run_tests.py
.github/workflows/: ci.yml
examples/: global-config.yaml  local-override.yaml  project-config.yaml
src/: __init__.py  cli.py  config.py  core.py  detection.py  git.py  logger.py  render.py  setup.py
tests/: __init__.py  test_cli.py  test_render.py
